detail tugas- overflow fix, title margin-top fix

--- a/public/assets/css/detail-tugas.css
+++ b/public/assets/css/detail-tugas.css
@@ -116,22 +116,22 @@ a {
 
 .dTugas-top-title {
     width: 60%;
-    margin-top: 15%;
+    /* margin-top: 15%; */
     line-height: 114%;
-    margin-bottom: 0;
+    margin-bottom: 20px;
 }
 
 .dTugas-top-img {
     /* object-fit: cover;
     object-position: center; */
-    bottom: 18%;
+    bottom: 2%;
     right: 6%;
     position: absolute;
     /* height: 183px;
     width: 183px; */
     /* height: 44.2vw; */
-    width: 240px;
-    height: 240px;
+    width: 320px;
+    height: 320px;
     z-index: -1;
 }
 
@@ -576,10 +576,11 @@ a {
     }
 
     .dTugas-top-img {
-        bottom: 8px;
+        bottom: -10px;
         right: 28px;
         position: absolute;
-        width: 30%;
+        width: 207px;
+        height: 207px;
     }
 
     .dTugas-body {
@@ -607,9 +608,13 @@ a {
 
 @media (max-width:576px) {
     .dTugas-top-img {
-        bottom: -10px;
-        width: 50%;
-        right: -10px;
+        right: 0px;
     }
 }
     
+@media (max-width:320px) {
+    .dTugas-top-img {
+        width: 173px;
+        height: 173px;
+    }
+}
